stretch 2 done, duplicate post bug fixed, 8 components built

--- a/to-do-list/src/App.css
+++ b/to-do-list/src/App.css
@@ -58,4 +58,22 @@
   font-size: 0.9em;
 }
 
+.task-container-done {
+  width: 250px;
+  border: 1px solid rgb(50, 135, 200);
+  border-radius: 10px;
+  background-color: rgb(50, 135, 200);
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px;
+  margin: 5px 5px
+}
+
+.task-entry-done {
+  font-size: 0.9em;
+  color: white;
+}
+
 
